--- a/cms/docker-compose.yml
+++ b/cms/docker-compose.yml
@@ -5,7 +5,7 @@ services:
   payload:
     image: node:18-alpine
     ports:
-      - "3000:3000"
+      - "${PORT}:${PORT}"
     volumes:
       - .:/home/node/app
       - node_modules:/home/node/app/node_modules
@@ -15,7 +15,7 @@ services:
       - mongo
     environment:
       MONGODB_URI: ${MONGODB_URI_DOCKER}
-      PORT: 3000
+      PORT: ${PORT}
       NODE_ENV: development
       PAYLOAD_SECRET: ${PAYLOAD_SECRET}
 
